--- a/config/assets.yml
+++ b/config/assets.yml
@@ -116,6 +116,8 @@ stylesheets:
     - public/stylesheets/compiled/grading_standards.css
   login:
     - public/stylesheets/compiled/login.css
+  terms_and_condition:
+    - public/stylesheets/compiled/terms_and_condition.css
   roster:
     - public/stylesheets/compiled/roster.css
   roster_user:
